feat: report the exact heap footprint of the B+ tree layer
Every column and every B+ tree variant now reports the heap it owns. The
figure is exact rather than an estimate: array capacities are charged as
allocated, object headers and alignment padding come from the running VM,
and shared structure is excluded at the slot rather than the object.

Two sizing modes, because the price indexes need both. The no-argument
form charges the tree spine alone - nodes, arrays and reference slots. The
overload takes a `ToLongFunction` the caller supplies to price stored
elements, returning zero for anything the tree merely borrows. A reduced
price index owns its spine while the super index owns the price bodies, so
counting the payload in both places would multiply it by the number of
reference-reduced indexes; a caller-supplied sizer expresses that split
without hard-coding either policy into the tree.

`BPlusTreeNode` carries the sizer-taking method, so the recursion is a
virtual call rather than an `instanceof` chain, and the int-keyed internal
node implements it once for both trees that extend it.

The JOL-measured tests found three real defects while being written:
separator keys were never handed to the element sizer, the transactional
reference wrappers went uncounted, and the tree object charged four
reference fields where it has six.

Ref: #1339